--- a/sahumerios.html
+++ b/sahumerios.html
@@ -66,7 +66,7 @@
                     enciende una esencia
                     divina de romance y poesía manifestando el <span class="funcion"> poder protector del amor</span>
                     universal que existe en
-                    el ser y en todos. Presentación: Caja con 8 unidades de 25cm. Duración <span class="calidad"> extra
+                    el ser y en todos. Presentación: Caja con 8 unidades de 25cm. <span class="calidad"> Duración extra
                         Premium</span>.</p>
             </div>
             <div class="imagenes2">
@@ -89,7 +89,7 @@
                     en
                     nuestro
                     entorno.
-                    Presentación: Caja con 8 unidades de 25cm. Duración <span class="calidad"> extra Premium</span>.</p>
+                    Presentación: Caja con 8 unidades de 25cm. <span class="calidad"> Duración extra Premium</span>.</p>
             </div>
             <div class="imagenes2">
                 <div class="imagenProducto">
@@ -108,7 +108,7 @@
                     las
                     personas que prueben estas fragancias. Presentación: Caja con 8 unidades de
                     25cm.
-                    Duración <span class="calidad"> extra Premium</span>.
+                    <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -133,7 +133,7 @@
                         el
                         dinero</span>.
                     Presentación:
-                    Caja con 8 unidades de 25cm. Duración <span class="calidad"> extra Premium</span>.</p>
+                    Caja con 8 unidades de 25cm. <span class="calidad"> Duración extra Premium</span>.</p>
             </div>
             <div class="imagenes2">
                 <div class="imagenProducto">
@@ -154,7 +154,7 @@
                         equilibrio emocional y
                         espiritual</span>.
                     Presentación:
-                    Caja con 8 unidades de 25cm. Duración <span class="calidad"> extra Premium</span>.
+                    Caja con 8 unidades de 25cm. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -174,7 +174,7 @@
                         protección y conector de energías divinas</span>.
                     Presentación: Caja con 8 unidades de
                     25cm.
-                    Duración <span class="calidad"> extra Premium</span>.
+                    <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -199,7 +199,7 @@
                     amor
                     hay prosperidad, paz y renacimiento.
                     Presentación: Caja con 9 varillas gruesas de
-                    17cm. Duración <span class="calidad"> extra Premium</span>.
+                    17cm. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -225,7 +225,7 @@
                     protección, contención y felicidad.
                     Presentación: Caja con 9 varillas
                     gruesas de
-                    17cm. Duración <span class="calidad"> extra Premium</span>.
+                    17cm. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -256,7 +256,7 @@
                     y
                     prosperidad económica.
                     Presentación: Caja con 9
-                    varillas. Duración <span class="calidad"> extra Premium.</span>
+                    varillas. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -271,7 +271,7 @@
                     meditaciones realizadas con este aroma como guía son mucho mas profundas y mas efectivas, pues nos
                     permiten alcanzar las metas propuestas.
                     Presentación: Caja con 9
-                    varillas. Duración <span class="calidad"> extra Premium</span>.</p>
+                    varillas. <span class="calidad"> Duración extra Premium</span>.</p>
             </div>
             <div class="imagenes2">
                 <div class="imagenProducto">
@@ -282,9 +282,10 @@
                 </div>
                 <p class="detalleProducto">El <span class="aroma">Eucalipto, Laurel y Cedro</span> <span
                         class="funcion">ayudan a la apertura de caminos y nuevas posibilidades
-                        espitirual.</span> Sus propiedades refrescantes estimulan la atmosfera con auras de energía positiva, liberando destellos de luz, sanación, protección y purificación.
+                        espitirual.</span> Sus propiedades refrescantes estimulan la atmosfera con auras de energía
+                    positiva, liberando destellos de luz, sanación, protección y purificación.
                     Presentación: Caja con 9
-                    varillas. Duración <span class="calidad"> extra Premium</span>.
+                    varillas. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -299,7 +300,7 @@
                         class="funcion">creando nuevas y renovadas posibilidades de evolución, progreso y armonía
                         espitirual.</span>
                     Presentación: Caja con 9
-                    varillas. Duración <span class="calidad"> extra Premium</span>.
+                    varillas. <span class="calidad"> Duración extra Premium</span>.
                 </p>
             </div>
             <div class="imagenes2">
@@ -314,7 +315,7 @@
                     Combinada con la energia natural del palo santo, crea y genera una atmosfera de paz, amor y
                     prosperidad.
                     Presentación: Caja con 9
-                    varillas. Duración <span class="calidad"> extra Premium.</span></p>
+                    varillas. <span class="calidad"> Duración extra Premium</span>.
             </div>
         </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
